# CProjectTemplate

./: CMakeLists.txt  CMakePresets.json
App/: main.c
Cmake/: Warnings.cmake
Scrible/: CMakeLists.txt
